mw-addtrailingslash.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: longhorn-ui-addtrailingslash
spec:
  redirectRegex:
    regex: ^http://yourhost.com/longhorn-ui$
    replacement: http://yourhost.com/longhorn-ui/
