mw-basicauth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: basicauth
spec:
  basicAuth:
    secret: authsecret
